# open-source-av-ragbot

./: .env  .gitignore  README.md  app.py  modal_docs.txt  package-lock.json  pyproject.toml  ragbot_deploy.sh
client/: README.md  env.example  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
client/src/: app.js  global.css  logo.tsx  main.tsx  style.css
client/src/components/: app.tsx  code.tsx  links.tsx  logo.tsx
server/: __init__.py  app.py
server/bot/: animation.py  modal_rag.py  moe_and_dal_bot.py
server/bot/assets/: modal_docs.md  modal_docs_short.md
server/bot/avatar/: animation.py
server/bot/processors/: canned_intro.py  modal_rag.py  parser.py  text_aggregator.py  unison_speaker_mixer.py
server/bot/services/: kokoro_websocket_service.py  modal_kokoro_service.py  modal_openai_service.py  modal_parakeet_service.py  modal_rag_service.py  modal_services.py  modal_vllm_service.py  modal_websocket_service.py  parakeet_service.py
server/common/: const.py
server/llm/: sglang_server.py  vllm_server.py
server/llm/tests/: test_streaming_json_parser.py
server/services/modal_rag/: parser.py  (+4 more)
server/stt/: parakeet_stt.py  streaming_parakeet_tunnel.py
server/tts/: kokoro_tts.py
swahili_bot/: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  app.py  requirements.txt
swahili_bot/client/: package.json
util_scripts/: analyze_audio_record.py  convert_audio.py  ragbot_deploy.sh
utils/: analyze_audio_record.py  convert_audio.py  pyannote_diarization.py  pyannote_test.py  ragbot_deploy.sh  resize_images.py  testing_script.md  warm_up_snapshots.sh
(+35 files in other folders)
