[project]
name = "pipecat-modal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "bs4>=0.0.2",
    "llama-index==0.12.41",
    "llama-index-embeddings-huggingface==0.5.4",
    "llama-index-readers-file>=0.1.0",
    "markdownify>=1.1.0",
    "modal>=1.0.4",
    "requests>=2.32.4",
    "tqdm>=4.66.0",
    "transformers==4.52.1",
    "torch==2.5.1",
    "unstructured>=0.10.0",
]
